<resources>
    <string name="app_name">PouyaFish</string>
    <string name="mobile">شماره همراه</string>
    <string name="name_app">اپلیکیشن حقوق پویا</string>
    <string name="enter_code">کد ارسالی را وارد کنید</string>
    <string name="change_mobile">تغییر شماره موبایل</string>
    <string name="resend_code">ارسال مجدد</string>
    <string name="continue_text">ادامه</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="personal_code">0000</string>
    <string name="pelak">۱۳۳ع۶۸ ایران ۳۳</string>
    <string name="car_name">مینی بوس مدل ۸۸</string>
    <string name="mobile_sam">09143343542</string>
    <string name="choose_year">انتخاب سال</string>
    <string name="choose_month">انتخاب ماه</string>
    <string name="show_salary">نمایش فیش حقوق</string>
    <string name="karkard">کارکرد</string>
    <string name="route_name">نام مسیر:</string>
    <string name="normal">عادی:</string>
    <string name="vacation">تعطیل:</string>
    <string name="price">مبلغ:</string>
    <string name="extra_bonus">سایر مزایا</string>
    <string name="moavaghe">معوقه</string>
    <string name="bonus_kosur">مزایا با کسور</string>
    <string name="extra_time">اضافه کاری</string>
    <string name="agent_work">ماموریت</string>
    <string name="mission">ماموریت</string>
    <string name="dispatch">دیسپاچری</string>
    <string name="prev_month">معوقه ماه قبل</string>
    <string name="bonus">پاداش</string>
    <string name="kosur">کسور</string>
    <string name="header">عنوان</string>
    <string name="loan_melli">وام بانک ملی</string>
    <string name="loan_box">وام صندوق</string>
    <string name="taxi_bill">قبض تاکسی</string>
    <string name="save_life">پس انداز</string>
    <string name="traffic_bill">جریمه ترافیکی</string>
    <string name="operation_bill">"جریمه اجرایی "</string>
    <string name="alalhesab">علی الحساب</string>
    <string name="firm_bedehi">بدهی شرکت</string>
    <string name="car_ins">بیمه ماشین</string>
    <string name="tamin_ins">بیمه تامین اجتماعی</string>
    <string name="other_kosur">سایر کسور</string>
    <string name="ins_complete">مازاد بیمه تکمیلی راننده</string>
    <string name="others_service">سرویس های متفرقه</string>
    <string name="count">تعداد</string>
    <string name="hour">ساعت</string>
    <string name="sum_pure">خالص دریافتی</string>
    <string name="account_address">شماره حساب بانکی</string>
    <string name="acount_owner">صاحب حساب</string>
    <string name="loading">در حال دریافت اطلاعات</string>
</resources>