<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="match_parent"
    tools:context=".SplashScreen">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:textSize="32sp"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="22dp"
        android:layout_centerInParent="true">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:hint="@string/mobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            android:visibility="gone"
            app:boxCornerRadiusTopEnd="15dp"
            android:id="@+id/box_mobile"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="11"
            app:boxStrokeColor="@color/black"
            app:boxStrokeWidth="2dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:id="@+id/txtMobile"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="24dp"
            android:id="@+id/layout_pin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_code"
                android:layout_gravity="right"
                android:textColor="@color/blue_dark"
                android:layout_marginRight="20dp"/>
            <com.chaos.view.PinView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_gravity="center_horizontal"
                app:viewType="line"
                app:lineColor="@color/white"
                app:itemSpacing="20dp"
                android:id="@+id/pinview"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/change_mobile"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:textColor="@color/blue_dark"
                    android:id="@+id/btn_change_mobile"/>


                <com.google.android.material.button.MaterialButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/resend_code"
                    app:strokeColor="@color/blue_dark"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:textColor="@color/blue_dark"
                    android:id="@+id/btn_resend_code"/>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:text="@string/continue_text"
        android:layout_alignParentBottom="true"
        android:layoutDirection="rtl"
        android:id="@+id/btn_continue"
        android:backgroundTint="@color/teal_200"
        app:icon="@drawable/ic_array_left"
        app:iconGravity="textEnd"
        app:cornerRadius="0dp"
        android:padding="-10dp"
        android:layout_margin="-10dp"/>


</RelativeLayout>