<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:cardBackgroundColor="@color/black"
            android:layout_marginRight="@dimen/card_spec_margin"
            android:layout_marginLeft="@dimen/card_spec_margin"
            app:cardCornerRadius="@dimen/card_corner_default">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="24dp"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:id="@+id/txt_name"
                        android:textColor="@color/white"
                        android:layout_alignParentRight="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/personal_code"
                        android:id="@+id/txt_personal_code"
                        android:textColor="@color/white"
                        android:layout_alignParentLeft="true"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="14dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pelak"
                        android:id="@+id/txt_pelak"
                        android:textColor="@color/white"
                        android:layout_alignParentRight="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/car_name"
                        android:id="@+id/txt_car_name"
                        android:textColor="@color/white"
                        android:layout_alignParentLeft="true"/>
                </RelativeLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_marginTop="14dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:id="@+id/txt_drive_helper"
                        android:layout_alignParentRight="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/mobile_sam"
                        android:id="@+id/txt_mobile"
                        android:textColor="@color/white"
                        android:layout_alignParentLeft="true"/>
                </RelativeLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:layoutDirection="rtl">
            <TextView
                android:layout_width="100dp"
                android:layout_marginRight="24dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_year"
                android:textColor="@color/black"
                android:textSize="18sp"/>
            
            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_weight="1"/>
            
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layoutDirection="rtl">
            
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right_black"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:id="@+id/btn_increase_year"/>
            
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/recycler_year"
                tools:listitem="@layout/recycler_choose_time"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:itemCount="3"/>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_black"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:id="@+id/btn_decrease_year"/>
            
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:layoutDirection="rtl">
            <TextView
                android:layout_width="100dp"
                android:layout_marginRight="24dp"
                android:layout_height="wrap_content"
                android:text="@string/choose_month"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:background="@color/black"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layoutDirection="rtl">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_right_black"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:id="@+id/btn_increase_month"/>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/recycler_month"
                tools:listitem="@layout/recycler_choose_time"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                tools:itemCount="3"/>


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_left_black"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:id="@+id/btn_decrease_month"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cardCornerRadius="0dp"
            app:cardBackgroundColor="@color/black"
            android:clickable="true"
            android:id="@+id/btn_next">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/show_salary"
                    android:textColor="@color/white"/>
            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/white"
        android:visibility="gone"
        android:id="@+id/layout_loading"
        android:layout_height="match_parent">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progress_bar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/teal_200"
            android:layout_centerHorizontal="true"
            android:text="@string/loading"
            android:layout_below="@+id/progress_bar"
            android:textSize="18sp"
            android:layout_marginTop="12dp"/>

    </RelativeLayout>
</FrameLayout>